# MyParcel

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zxj/parcel/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Parcel.cpp  Parcel.h  native-lib.cpp
app/src/main/java/com/zxj/parcel/: MainActivity.kt  MyParcel.kt  Student.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zxj/parcel/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
